Avoid unnecessary operations for descendants of removed identifiers